Prob/prob.css
body{
	text-align:center;
	background-image:url('https://i.ytimg.com/vi/dIM_8lL4h1w/maxresdefault.jpg');
	background-attachment:fixed;
	background-position: center;
	background-size:cover;
	overflow-x:hidden;
}

h1{
    transform:translateY(-50%);
	font-size:300%;
	background:rgba(236, 240, 241,0.8);
	max-width:80vw;
	margin: 0 auto;
	position:relative;
	top:50vh;
}

/*h2{
	padding: 5vh;
}
h2 span{
	background:rgba(236, 240, 241,0.8);
	padding: 2vh 5vh;
}*/





section{
	margin:0;
	background-attachment:fixed;
	background-position: center;
	background-size:cover;
	min-height:100vh;
	padding:0;
}
section div{
	padding: 2vw;
	background:#2c3e50;
	color:white;
	text-align:left;
	position:relative;
	top:10vh;
	left:5vw;
	width:60vw;
}

#Sec1{
	
    background-image:url('https://c2.staticflickr.com/4/3094/2904994626_64c79250d4_b.jpg');
}
#Sec2{
    background-image:url('https://c2.staticflickr.com/8/7521/15680439035_3e12e242b9_k.jpg');
}
#Sec3{
	/*background-image:url('https://upload.wikimedia.org/wikipedia/commons/5/5f/Danger-keep_off_sign.jpg');*/
	background-image:url('/img/Danger.jpg');
}




#DownButton{
	position:fixed;
	bottom:1vh;
	right:1vh;
	background:black;
	color:white;
	cursor:pointer;
	text-align:center;
	
	width:50px;
	height:50px;
	border-radius:25px;
	line-height:50px;
	font-size:175%;
}

